# ppt-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
src/: assemble_plan.py  create_template.py  llm_summarize.py  parse_pdf.py  render_pptx.py
